<resources>
    <string name="app_name">MyIMC</string>
    <string name="peso">Peso (Kg)</string>
    <string name="altura">Altura (cm)</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="calcular">Calcular</string>
    <string name="filename">resultados.txt</string>
    <string name="msg_correct">Datos guardados</string>
    <string name="msg_warning2">"El fichero no existe"</string>
    <string name="title_activity_historico">Historico</string>
    <string name="peso_inferior">Peso inferior al normal</string>
    <string name="normal">Normal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidad">Obesidad</string>
    <string name="seleccionar_sexo">Tienes que seleccionar el sexo</string>
    <string name="campos_sexo_altura">Tienes que rellenar los campos de peso y altura</string>

    Tienes que rellenar los campos de peso y altura
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imc">IMC</string>
    <string name="hist_rico">Histórico</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="aviso">Aviso</string>
    <string name="quieres_guardar_los_datos">¿Quieres guardar los datos?</string>
    <string name="datos_guardados">"La información se ha registrado en el histórico"</string>
    <string name="datos_no_guardados">"La información no ha quedado registrada"</string>


</resources>