<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImcFragment">


    <TextView
        android:id="@+id/twCalculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739" />

    <Button
        android:id="@+id/bt_Calcular"
        android:layout_width="227dp"
        android:layout_height="45dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="304dp"
        android:text="@string/calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tbPeso"
        android:layout_width="210dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/altura"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/tbAltura"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/tbPeso"
        app:layout_constraintTop_toBottomOf="@+id/tbPeso" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="124dp"
        android:text="@string/peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="231dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:baselineAligned="false"
        android:checkedButton="171"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">


        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="109dp"
            android:layout_height="26dp"
            android:text="@string/mujer" />

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="109dp"
            android:layout_height="25dp"
            android:text="@string/hombre" />
    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>